--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>The app is running correctly, Kirome checked with jenkins and push to master with Jenkins</h1>
+    <h1>The app is running correctly, checked with jenkins and push to master with Jenkins</h1>
 
 
     <p>Welcome to the Sparta Test App</p>
